Implement CPythonAPI using jdk.incubator.foreign